<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16sp"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_baseline_store_24"
        android:id="@+id/edit_cost_layout"
        android:layout_width="200sp"
        android:hint="@string/answer"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cost"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/icon_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_cost_layout"
        android:src="@drawable/ic_baseline_room_service_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_question"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/icon_question"
        app:layout_constraintTop_toBottomOf="@id/edit_cost_layout"
        tools:ignore="NotSibling" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:checkedButton="@id/excellent">

        <RadioButton
            android:id="@+id/excellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excellent"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="24sp" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/roundup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        android:text="@string/switch_text"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundup"
        android:text="@string/text_button"
        android:backgroundTint="@color/teal_700"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        android:id="@+id/result"
        android:text="@string/result_name"
        android:textSize="16sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>